--- a/_component/layout/layout.css
+++ b/_component/layout/layout.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -12,4 +16,8 @@
 
 .column[span=row] {
   grid-column: 1/-1;
+}
+
+.content {
+  padding: 0 36px;
 }/*# sourceMappingURL=layout.css.map */
