--- a/_component/layout/layout.scss
+++ b/_component/layout/layout.scss
@@ -4,6 +4,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: 'Roboto', sans-serif;
+}
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -12,4 +15,7 @@
 .column[span="row"] {
     grid-column: 1/-1;
    
+}
+.content {
+    padding: 0 36px;
 }
