--- a/_component/layout/roboto.css
+++ b/_component/layout/roboto.css
@@ -1,27 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 10px;
-}
-
-.column[span=row] {
-  grid-column: 1/-1;
-}
-
-.content {
-  padding: 0 36px;
-}
-
 /* cyrillic-ext */
 @font-face {
   font-family: "Roboto";
@@ -273,4 +249,4 @@ body {
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmYUtfBBc4.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=roboto.css.map */
